# host-reference-ocr

./: Cargo.toml  LICENSE  NOTICE.md  README.md  deny.toml
models/: NOTICE.txt
src/: main.rs
tests/: conformance.rs
